--- a/Desafios/desafio012/style.css
+++ b/Desafios/desafio012/style.css
@@ -1,8 +1,13 @@
 @charset "UTF-8";
 
-* {
+*{
     margin: 0px;
     padding: 0px;
+}
+
+html, body{
+    min-height: 100vh;
+    background-color: darkgrey;
 }
 
 header{
@@ -11,26 +16,50 @@ header{
     text-align: center;
 }
 
-header a {
+header > h1{
+    padding-top: 50px;
+    font-variant: small-caps;
+}
+
+header > p{
+    padding-bottom: 50px;
+}
+
+a{
+    color: white;
     text-decoration: none;
+    font-weight: bolder;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+
+section.normal{
+    background-color: white;
+    color: black;
+}
+
+section.imagem{
+    background-color: gray;
     color: white;
 }
 
-header a:hover{
-    text-decoration: underline;
-    transition-duration: 1s;
-}
-
-section p{
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+section.imagem > p{
+    background-color: rgba(0, 0, 0, 0.23);
+    width: 400px;
 }
 
 footer{
-    text-align: center;
     background-color: black;
+    text-align: center;
     color: white;
+    padding: 10px;
 }
