--- a/Desafios/desafio012/style.css
+++ b/Desafios/desafio012/style.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Single+Day&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Single+Day&display=swap');
+
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Poppins', sans-serif;
+    --font3: 'Single Day', cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -8,6 +19,7 @@
 html, body{
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--font1);
 }
 
 header{
@@ -19,6 +31,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 4em;
 }
 
 header > p{
@@ -40,6 +54,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 1.7em;
 }
 
 section.normal{
