--- a/Desafios/desafio012/style.css
+++ b/Desafios/desafio012/style.css
@@ -58,6 +58,9 @@ section{
     font-size: 1.7em;
 }
 
+section > p{
+    padding-bottom: 2em;
+}
 section.normal{
     background-color: white;
     color: black;
@@ -66,10 +69,26 @@ section.normal{
 section.imagem{
     background-color: gray;
     color: white;
+    text-shadow: 1px 1px 0px black;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.49);
+    background-attachment: fixed;
+}
+
+section#img01{
+
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02{
+
+    background-image: url(imagens/background002.jpg);
+    background-size: cover;
 }
 
 section.imagem > p{
-    background-color: rgba(0, 0, 0, 0.23);
+    background-color: rgba(0, 0, 0, 0.5);
     width: 400px;
 }
 
