--- a/Exercicios/ex027/mq002/estilo/style.css
+++ b/Exercicios/ex027/mq002/estilo/style.css
@@ -1,3 +1,23 @@
 @charset "UTF-8";
 
 /* configuração padrão */
+
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body{
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+h1{
+    color: white;
+    text-shadow: 1.5px 1.5px 0px gray;
+    padding: 10px;
+}
